--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
 <app-navbar></app-navbar>
 <app-hero-section></app-hero-section>
 <app-jobseekers></app-jobseekers>
+<app-countries></app-countries>
