--- a/src/app/pages/home/sections/hero-section/hero-section.component.html
+++ b/src/app/pages/home/sections/hero-section/hero-section.component.html
@@ -1,28 +1,28 @@
 <section class="hero">
   <div class="container col-xxl-8 px-4 py-5">
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+    <div
+      class="row flex-lg-row-reverse align-items-center g-5 py-5 padding-right"
+    >
       <div class="col-10 col-sm-8 col-lg-6"></div>
-      <div class="col-lg-6">
-        <h1
-          class="display-5 fw-bold lh-1 mb-3"
-          style="text-align: left; color: white"
+      <h1
+        class="display-5 fw-bold lh-1 mb-3"
+        style="text-align: left; color: white"
+      >
+        Finding the Right Fit for You and Your Company
+      </h1>
+      <p class="lead" style="text-align: left; color: white">
+        7107 Islands has a reputation for excellence in its recruiting,
+        selection process, training, and deployment of manpower across the
+        globe.
+      </p>
+      <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+        <button
+          type="button"
+          class="btn btn-warning btn-lg px-4 me-md-2"
+          style="border-radius: 25px; width: 15em"
         >
-          Finding the Right Fit for You and Your Company
-        </h1>
-        <p class="lead" style="text-align: left; color: white">
-          7107 Islands has a reputation for excellence in its recruiting,
-          selection process, training, and deployment of manpower across the
-          globe.
-        </p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <button
-            type="button"
-            class="btn btn-warning btn-lg px-4 me-md-2"
-            style="border-radius: 25px; width: 15em"
-          >
-            Join Us
-          </button>
-        </div>
+          Join Us
+        </button>
       </div>
     </div>
   </div>
