--- a/src/app/pages/home/sections/jobseekers/jobseekers.component.html
+++ b/src/app/pages/home/sections/jobseekers/jobseekers.component.html
@@ -6,7 +6,7 @@
     ></span>
   </div>
   <div class="flex-item">
-    <span class="inner-text job-seekers-message">
+    <div class="inner-text job-seekers-message">
       <h3>FOR JOBSEEKERS</h3>
       <h5>Find your next opportunity with us.</h5>
       <p>
@@ -18,26 +18,38 @@
         become part of our growing network of professionals. Click here to join
         our network.
       </p>
-    </span>
+      <button
+        type="button"
+        class="btn btn-dark"
+        style="padding: 10px 100px; border-radius: 50px"
+      >
+        Join Us
+      </button>
+    </div>
   </div>
 </div>
 <div class="jobs">
-  <div class="flex-item">
-    <span class="inner-text job-seekers-message">
-      <h3>FOR JOBSEEKERS</h3>
-      <h5>Find your next opportunity with us.</h5>
+  <div class="flex-item" id="child1">
+    <div class="inner-text job-seekers-message">
+      <h3>FOR EMPLOYERS</h3>
+      <h5>Connect with the right Talent</h5>
       <p>
-        By representing you and your interests, our Talent Acquisition
-        consultants will ensure to properly set expectations and next steps and
-        work to get you in front of the best companies with the best
-        opportunities in the market today. Whether it be on-site work or
-        something fully remote, the search for your ideal job begins when you
-        become part of our growing network of professionals. Click here to join
-        our network.
+        Our business development managers can provide you with the decisional
+        advantage when it comes to your organization’s staffing needs. Acting as
+        your business partner, we make sure that we are able to update and
+        immediately present to you what is available in the talent market today.
       </p>
-    </span>
+
+      <button
+        type="button"
+        class="btn btn-dark"
+        style="padding: 10px 100px; border-radius: 50px"
+      >
+        Join Us
+      </button>
+    </div>
   </div>
-  <div class="flex-item">
+  <div class="flex-item" id="child2">
     <span
       class="job-seekers"
       [ngStyle]="{ 'background-image': 'url(' + jobSeeker2 + ')' }"
