--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -148,7 +148,7 @@ body {
 .content {
   position: relative;
   width: 90%;
-  max-width: 400px;
+  max-width: 300px;
   margin: auto;
   overflow: hidden;
 }
@@ -172,6 +172,7 @@ body {
 .content-image {
   width: 100%;
 }
+
 img {
   box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
@@ -211,4 +212,45 @@ img {
 }
 .fadeIn-bottom {
   top: 80%;
+}
+
+.slick-slide {
+  margin: 0px 10px;
+}
+.slick-slide img {
+  width: 100%;
+}
+
+.section-title-margin {
+  margin-bottom: 1.3em;
+}
+
+.custom-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  transition: all 0.4s ease-in-out 0s;
+  height: 85%;
+}
+
+.custom-overlay:hover {
+  opacity: 1;
+}
+
+.custom-overlay h3 {
+  color: #fff;
+  font-weight: 500;
+  letter-spacing: 0.15em;
+  margin-bottom: 0.5em;
+  text-transform: uppercase;
+  text-align: center;
+  top: 21.25%;
+  left: 0;
+  right: 0;
+  position: absolute;
 }
