added github pages deployment

--- a/src/app/pages/home/sections/countries/countries.component.html
+++ b/src/app/pages/home/sections/countries/countries.component.html
@@ -5,6 +5,7 @@
   <div class="owl-carousel">
     <div *ngFor="let country of countries" class="flags-row">
       <img
+        id="flag"
         class="content-image"
         src="https://flagicons.lipis.dev/flags/4x3/{{ country.id }}.svg"
       />
