added about page - story and separator

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,6 @@
+<router-outlet></router-outlet>
 <app-navbar></app-navbar>
 <app-hero-section></app-hero-section>
 <app-jobseekers></app-jobseekers>
 <app-countries></app-countries>
+<app-footer></app-footer>
