--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -23,16 +23,16 @@
 
     <div class="collapse navbar-collapse" id="navbarsExample07XL">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+        <li class="nav-item header">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+        <li class="nav-item header">
+          <a class="nav-link" href="" routerLink="/about">About Us</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item header">
           <a class="nav-link disabled">Disabled</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item header dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
