--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -2,4 +2,7 @@
 <app-hero-about></app-hero-about>
 <app-about-story></app-about-story>
 <app-about-separator></app-about-separator>
+<app-about-poea></app-about-poea>
+<app-about-mission></app-about-mission>
+<app-maps></app-maps>
 <app-footer></app-footer>
