--- a/src/app/pages/about/sections/about-poea/about-poea.component.html
+++ b/src/app/pages/about/sections/about-poea/about-poea.component.html
@@ -1,1 +1,15 @@
-<p>about-poea works!</p>
+<section class="hero-poea">
+  <div class="px-4 py-5 my-5 text-center">
+    <h1 class="display-5 fw-bold">
+      We are<br /><span class="highlight">POEA Accredited</span>
+    </h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="subheader">
+        Duly licensed under
+        <span class="highlight-text">POEA Lisence Number: 194-LB-111914-R</span
+        >, 7107 Isalnds has been operating since 1979 and has since deployed
+        workforces to 5 continents.
+      </p>
+    </div>
+  </div>
+</section>
