--- a/src/app/pages/home/sections/countries/countries.component.html
+++ b/src/app/pages/home/sections/countries/countries.component.html
@@ -18,6 +18,8 @@
   </div>
 </div>
 
+<app-maps></app-maps>
+
 <!-- <div *ngFor="let country of countries">
   <div class="content">
     <div class="content-overlay"></div>
