--- a/src/app/pages/home/sections/jobseekers/jobseekers.component.html
+++ b/src/app/pages/home/sections/jobseekers/jobseekers.component.html
@@ -1,52 +1,36 @@
-<div class="jobs">
-  <div class="flex-item">
-    <span
-      class="job-seekers"
-      [ngStyle]="{ 'background-image': 'url(' + jobSeeker1 + ')' }"
-    ></span>
-  </div>
-  <div class="flex-item">
-    <div class="inner-text job-seekers-message">
-      <h3>FOR JOBSEEKERS</h3>
-      <h5>Find your next opportunity with us.</h5>
-      <p>
-        By representing you and your interests, our Talent Acquisition
-        consultants will ensure to properly set expectations and next steps and
-        work to get you in front of the best companies with the best
-        opportunities in the market today. Whether it be on-site work or
-        something fully remote, the search for your ideal job begins when you
-        become part of our growing network of professionals. Click here to join
-        our network.
-      </p>
-      <button
-        type="button"
-        class="btn btn-dark"
-        style="padding: 10px 100px; border-radius: 50px"
-      >
-        Join Us
-      </button>
+<section class="showcase">
+  <div class="container-fluid p-0">
+    <div class="row g-0">
+      <div
+        class="col-lg-6 order-lg-2 text-white showcase-img"
+        style="
+          background-image: url('../../../../../assets/images/home-jobseekers.jpg');
+        "
+      ></div>
+      <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+        <h2>Fully Responsive Design</h2>
+        <p class="lead mb-0">
+          When you use a theme created by Start Bootstrap, you know that the
+          theme will look great on any device, whether it's a phone, tablet, or
+          desktop the page will behave responsively!
+        </p>
+      </div>
     </div>
-  </div>
-</div>
-<div class="jobs">
-  <div class="flex-item" id="child1">
-    <div class="inner-text job-seekers-message">
-      <h3>FOR EMPLOYERS</h3>
-      <h5>Connect with the right Talent</h5>
-      <p>
-        Our business development managers can provide you with the decisional
-        advantage when it comes to your organization’s staffing needs. Acting as
-        your business partner, we make sure that we are able to update and
-        immediately present to you what is available in the talent market today.
-      </p>
-
-      <button
-        type="button"
-        class="btn btn-dark"
-        style="padding: 10px 100px; border-radius: 50px"
-      >
-        Join Us
-      </button>
+    <div class="row g-0">
+      <div
+        class="col-lg-6 text-white showcase-img"
+        style="
+          background-image: url('../../../../../assets/images/home-for-employers.jpg');
+        "
+      ></div>
+      <div class="col-lg-6 my-auto showcase-text">
+        <h2>Updated For Bootstrap 5</h2>
+        <p class="lead mb-0">
+          Newly improved, and full of great utility classes, Bootstrap 5 is
+          leading the way in mobile responsive web development! All of the
+          themes on Start Bootstrap are now using Bootstrap 5!
+        </p>
+      </div>
     </div>
   </div>
   <div class="flex-item" id="child2">
@@ -55,4 +39,4 @@
       [ngStyle]="{ 'background-image': 'url(' + jobSeeker2 + ')' }"
     ></span>
   </div>
-</div>
+</section>
