--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -53,8 +53,86 @@
   width: 100%;
   overflow: hidden;
 }
+.hero-services {
+  /* Sizing */
+  width: 100vw;
+  height: 100vh;
 
+  /* Flexbox stuff */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* Text styles */
+  text-align: center;
+
+  /* Background styles */
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.615),
+      rgba(0, 0, 0, 0.615)
+    ),
+    url(../images/services-hero.jpg);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  overflow: hidden;
+  color: white;
+}
+
+.hero-poea {
+  /* Sizing */
+  width: 100vw;
+  height: 100vh;
+
+  /* Flexbox stuff */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* Text styles */
+  text-align: center;
+
+  /* Background styles */
+  background-image: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.615),
+      rgba(255, 255, 255, 0.615)
+    ),
+    url(../images/world-map.svg);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  overflow: hidden;
+}
+
+.hero-poea .highlight {
+  color: #ffca2c;
+  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000, 1px 1px 0 #000;
+}
+.hero-poea p {
+  font-weight: 400;
+}
+
+.hero-poea h1 {
+  font-size: 6em;
+  color: black;
+  text-shadow: 3px 3px 0 #ffca2c, -1px -1px 0 #ffca2c, 1px -1px 0 #ffca2c,
+    -1px 1px 0 #ffca2c, 1px 1px 0 #ffca2c;
+}
+.hero-poea .highlight-text {
+  background-color: #ffca2c;
+}
 .hero-about h1 {
+  font-size: 6em;
+  color: white;
+}
+.hero-services h1 {
   font-size: 6em;
   color: white;
 }
@@ -133,6 +211,30 @@
 }
 
 @media only screen and (max-width: 980px) {
+  .subheader-services {
+    color: white;
+    font-size: 3vw;
+  }
+  .hero-about .subheader {
+    font-size: 3vw;
+  }
+
+  .hero-services h1 {
+    font-size: 10vw;
+  }
+  .hero-services p {
+    font-size: 5vw;
+  }
+
+  .hero-about h1 {
+    font-size: 10vw;
+  }
+  .hero-about p {
+    font-size: 5vw;
+  }
+  .hero-poea h1 {
+    font-size: 10vw;
+  }
   .inner-text {
     padding: 5% 5%;
   }
@@ -184,7 +286,7 @@ body {
   font-family: "Raleway", sans-serif;
 }
 .container .footer {
-  margin-top: 200px;
+  margin-top: 40px;
 }
 .title {
   color: #1a1a1a;
@@ -267,6 +369,7 @@ body {
 
 .section-title-margin {
   margin-bottom: 1.3em;
+  margin-top: 2.3em;
 }
 
 .custom-overlay {
@@ -320,3 +423,41 @@ body {
   padding-top: 32px;
   padding-bottom: 32px;
 } */
+
+.para-weight p {
+  font-weight: 300;
+}
+
+.subheader {
+  font-weight: 300;
+}
+
+.showcase .showcase-text {
+  padding: 3rem;
+}
+.showcase .showcase-img {
+  min-height: 30rem;
+  background-size: cover;
+}
+@media (min-width: 768px) {
+  .showcase .showcase-text {
+    padding: 7rem;
+  }
+}
+.showcase {
+  background-color: #dcbc37;
+}
+
+.subheader-services {
+  font-size: 2em;
+  color: white;
+}
+
+.faFooter {
+  color: gray;
+  font-size: 1.3em;
+}
+
+.faFooter:hover {
+  color: blue;
+}
