--- a/src/app/pages/about/sections/about-story/about-story.component.html
+++ b/src/app/pages/about/sections/about-story/about-story.component.html
@@ -1,4 +1,4 @@
-<div class="container col-xxl-8 px-4 py-5">
+<div class="container col-xxl-8 px-4 py-5 para-weight">
   <div class="row flex-lg-row-reverse g-5 py-5">
     <div class="col-10 col-sm-8 col-lg-6">
       <img
