--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,120 +1,40 @@
-<footer class="footer-section">
-  <div class="container">
-    <div class="row footer">
-      <div class="col-6 col-md-2 mb-3">
-        <h5>Section</h5>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">Home</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">Features</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">Pricing</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">FAQs</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">About</a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="col-6 col-md-2 mb-3">
-        <h5>Section</h5>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">Home</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">Features</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">Pricing</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">FAQs</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">About</a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="col-6 col-md-2 mb-3">
-        <h5>Section</h5>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">Home</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">Features</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">Pricing</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">FAQs</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-muted">About</a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="col-md-5 offset-md-1 mb-3">
-        <form>
-          <h5>Subscribe to our newsletter</h5>
-          <p>Monthly digest of what's new and exciting from us.</p>
-          <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-            <label for="newsletter1" class="visually-hidden"
-              >Email address</label
-            >
-            <input
-              id="newsletter1"
-              type="text"
-              class="form-control"
-              placeholder="Email address"
-              fdprocessedid="nbk4yl"
-            />
-            <button
-              class="btn btn-primary"
-              type="button"
-              fdprocessedid="ljjgp9"
-            >
-              Subscribe
-            </button>
-          </div>
-        </form>
-      </div>
+<div class="container">
+  <footer
+    class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
+  >
+    <div class="col-md-4 d-flex align-items-center">
+      <a
+        href="/"
+        class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1"
+      >
+        <!-- <svg class="bi" width="30" height="24">
+          <use xlink:href="#bootstrap"></use>
+        </svg> -->
+      </a>
+      <span class="mb-3 mb-md-0 text-muted"
+        >© 2023 - 7107 Islands Placement and Promotions, Inc</span
+      >
     </div>
 
-    <div
-      class="d-flex flex-column flex-sm-row justify-content-between py-4 border-top"
-    >
-      <p>© 2022 Company, Inc. All rights reserved.</p>
-      <ul class="list-unstyled d-flex">
-        <li class="ms-3">
-          <a class="link-dark" href="#"
-            ><svg class="bi" width="24" height="24">
-              <use xlink:href="#twitter"></use></svg
-          ></a>
-        </li>
-        <li class="ms-3">
-          <a class="link-dark" href="#"
-            ><svg class="bi" width="24" height="24">
-              <use xlink:href="#instagram"></use></svg
-          ></a>
-        </li>
-        <li class="ms-3">
-          <a class="link-dark" href="#"
-            ><svg class="bi" width="24" height="24">
-              <use xlink:href="#facebook"></use></svg
-          ></a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</footer>
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3">
+        <a target="_blank" href="https://www.facebook.com/7107agencyofficialFB">
+          <fa-icon class="faFooter" [icon]="facebook"></fa-icon>
+        </a>
+      </li>
+      <li class="ms-3">
+        <a target="_blank" href="https://www.instagram.com/islands.7107">
+          <fa-icon class="faFooter" [icon]="instagram"></fa-icon>
+        </a>
+      </li>
+      <li class="ms-3">
+        <a
+          target="_blank"
+          href="https://www.linkedin.com/company/7107-islands-placement-&-promotions-inc-/"
+        >
+          <fa-icon class="faFooter" [icon]="linkedIn"></fa-icon>
+        </a>
+      </li>
+    </ul>
+  </footer>
+</div>
